# surface-partition

./: .gitignore  .python-version  CLAUDE.md  IMPLEMENTATION_STATUS_TYPE2_PROTECTION.md  IMPLEMENTATION_STATUS_TYPE2_REVERSE_MIGRATION.md  INDICATOR_FUNCTIONS_UPDATE_IMPLEMENTATION.md  INTEGRATION_COMPLETE.md  LOGGING_IMPROVEMENTS_SUMMARY.md  README.md  TYPE1_OPTIMIZATION_COMPLETE.md  pyproject.toml  requirements.txt
cluster/: cleanup_sweep_results.py  pelle_config.sh  submit.sh  submit_refinement.sh  submit_relaxation.sh  submit_sweep.sh
docs/: AGENT_IMPLEMENTATION_PROMPT.md  AI_AGENT_INTEGRATION_PLAN.md  ANALYTICAL_STEINER_DERIVATIVES_PLAN.md  AREA_JACOBIAN_BOTTLENECK.md  BOUNDARY_VISUALIZATION_ISSUES.md  CODEBASE_RESTRUCTURE_PLAN.md  EXACT_HESSIAN_VALIDATION_AND_PERF_PLAN.md  FUTURE_REMOVE_BOUNDARY_TOPOLOGY_PATH.md  IMPLEMENTATION_PLAN_WITH_TESTING.md  IPOPT_INTEGRATION_PLAN.md  IPOPT_REFINEMENT_QUALITY.md  MD_SIMULATION_EXPORT_NOTES.md  MESH_DEGENERACY_AND_NEEDLE_TRIANGLES.md  OPTIMIZATION_METHODS_PRIMER.md  PROMPT_PHASE_A_VECTORISED_HESSIAN.md  PROPOSED_TYPE1_STRATEGY.md  SCALABILITY_ANALYSIS.md  SCRIPT_CONSOLIDATION_PLAN.md  SPARSE_JACOBIAN_AND_EXACT_HESSIAN_PLAN.md  TOPOLOGY_SWITCHING_EXPLANATION.md  TRIPLE_POINT_CORNER_AREA_BUG.md  TYPE1_VP_SELECTION_BUG.md  VECTORIZED_EVALUATION_OPTIMIZATION.md
examples/: component_proximity_debug.py  data_loader.py  find_surface_partition.py  optimization_analyzer.py  refine_perimeter.py  surface_visualization.py  test_area_conservation.py  test_categorization_consistency.py  test_topology_switcher_basic.py  (+6 more)
src/: __init__.py  (+6 more)
(+211 files in other folders)
