[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "surface-partition"
version = "0.2.0"
description = "Minimal-perimeter partition optimization on closed surfaces using Γ-convergence"
authors = [{name = "Your Name", email = "your.email@example.com"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "pyslsqp>=0.1.0",
    "pyyaml>=6.0",
    "matplotlib>=3.5.0",
    "h5py>=3.7.0",
    "tqdm>=4.62.0",
]

[project.optional-dependencies]
ipopt = [
    "cyipopt>=1.3.0",
]
dev = [
    "pytest>=6.0",
    "black>=22.0",
    "flake8>=4.0",
]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.pytest.ini_options]
testpaths = ["testing"]
python_files = ["test_*.py"]
